# xsnippet-api

./: .coveragerc  .gitignore  .gitreview  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES  Cargo.toml  Cross.toml  Dockerfile  LICENSE  MANIFEST.in  README.markdown  README.md  README.rst  alembic.ini  app.yaml  diesel.toml  dispatcher.py  groups  handlers.py  project.config  requirements.txt  robots.txt  setup.py  tox.ini  xsnippet.py
.github/actions/setup-postgres/: action.yml
.github/workflows/: release.yml  tests.yml
contrib/: swagger.yaml
contrib/ansible/: deploy.yaml  docker-compose.yml.j2  xsnippet-api.conf.j2
contrib/docker/: Dockerfile
contrib/openapi/: spec.yml
data/static/pygments/styles/: xoria256.css
data/static/styles/: default.css  embed.css
data/static/verifications/: yandex_78be63ee9b494616.html
docs/: conf.py  index.rst  requirements.txt
handlers/: __init__.py  aboutpage.py  basehandler.py  downloadsnippet.py  embedsnippet.py  listsnippet.py  mainpage.py  newsnippet.py  pngsnippet.py  rawsnippet.py  recentsnippet.py  searchsnippet.py  showsnippet.py  sitemap.py  uploadpage.py
lib/pagination/: Paginator.py  __init__.py
lib/pygments/formatters/: img.py
lib/pygments/lexers/: _mapping.py
lib/pygments/styles/: xoria256.py
model/: __init__.py  snippet.py
src/: application.rs  errors.rs  main.rs  util.rs  web.rs
src/routes/: mod.rs  snippets.rs  syntaxes.rs
src/storage/: errors.rs  mod.rs  models.rs  util.rs
src/storage/sql/: mod.rs  models.rs  schema.rs
src/storage/sql/migrations/: env.py
src/storage/sql/migrations/2020-07-25-065258_create_snippets/: down.sql  up.sql
src/storage/sql/migrations/versions/: 1bf4e4e7b24f_initial_schema.py
src/web/: auth.rs  content.rs  tracing.rs
src/web/auth/: jwt.rs
static/: robots.txt
static/codemirror/lib/: codemirror.js
static/highlight.js/: highlight.pack.js
static/highlight.js/styles/: xsnippet.css
static/js/: terminal.js  tooltip.js
static/styles/: default.css
static/verifications/: yandex_6fbaa0368039cfec.html
templates/: 404.html  about.html  base.html  donate.html  error.html  list.html  new.html  show.html  sitemap.xml  tools.html  upload.html
tests/: __init__.py  conftest.py  requirements.txt  test_app.py  test_application.py  test_conf.py  test_gabbits.py  test_resource.py  test_router.py
tests/gabbits/: auth.yaml  create-snippet-errors.yaml  create-snippet.yaml  get-snippet-errors.yaml  get-snippet.yaml  import-snippet.yaml  imported-snippets-pagination.yaml  list-snippets-errors.yaml  list-snippets-filtering.yaml  list-snippets-pagination.yaml  list-snippets.yaml  syntaxes-null.yaml  syntaxes-sorted.yaml  syntaxes.yaml
tests/middlewares/: test_auth.py
tests/resources/: conftest.py  test_resource.py  test_snippets.py  test_syntaxes.py
tests/services/: test_snippet.py
ui/: index.html
ui/js/: app.js
xsnippet/: __init__.py  settings.py  wsgi.py
xsnippet/api/: __init__.py  __main__.py  application.py  conf.py  database.py  default.conf  exceptions.py  resource.py  router.py  routes.py
xsnippet/api/middlewares/: __init__.py  auth.py
xsnippet/api/resources/: __init__.py  misc.py  snippets.py  syntaxes.py
xsnippet/api/services/: __init__.py  snippet.py
xsnippet/db/: __init__.py  models.py
xsnippet/views/: __init__.py  v1.py  v2.py
xsnippet_api/: __init__.py  __main__.py  application.py  conf.py  database.py  default.conf  exceptions.py  router.py
xsnippet_api/middlewares/: __init__.py  auth.py
xsnippet_api/resources/: __init__.py  misc.py  resource.py  snippets.py
xsnippet_api/services/: snippet.py
