[package]
name = "xsnippet-api"
version = "5.0.0"
authors = ["XSnippet Team <dev@xsnippet.org>"]
edition = "2021"
description = "XSnippet is a simple web-service for sharing code snippets on the Internet."
readme = "README.md"
homepage = "https://xsnippet.org/"
repository = "https://github.com/xsnippet/xsnippet-api/"
license = "MIT"
keywords = ["snippets", "snippet", "code", "storage", "api"]
categories = [
    "web-programming",
    "web-programming::http-server",
]
publish = false

[profile.release]
debug = true

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
jsonwebtoken = "7.2.0"
rand = "0.7.3"
reqwest = { version = "0.11.2", features = ["json"] }
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
percent-encoding = "2.1.0"

[dev-dependencies]
tempfile = "3.2.0"
tokio = { version = "1.6.1", features = ["rt"] }
