[package]
name = "xsnippet-api"
version = "5.0.0"
authors = ["XSnippet Team <dev@xsnippet.org>"]
edition = "2021"
description = "XSnippet is a simple web-service for sharing code snippets on the Internet."
readme = "README.md"
homepage = "https://xsnippet.org/"
repository = "https://github.com/xsnippet/xsnippet-api/"
license = "MIT"
keywords = ["snippets", "snippet", "code", "storage", "api"]
categories = [
    "web-programming",
    "web-programming::http-server",
]
publish = false

[profile.release]
debug = true

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono"] }
diesel-async = { version = "0.9.0", features = ["deadpool", "postgres"] }
futures-util = { version = "0.3.32", features = ["async-await-macro"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.7.3"
reqwest = { version = "0.11.2", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
percent-encoding = "2.1.0"
openssl-sys = { version = "0.9.104", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.2.0"
tokio = { version = "1.6.1", features = ["rt"] }
