[package]
name = "xsnippet-api"
version = "5.0.0"
authors = ["XSnippet Team <dev@xsnippet.org>"]
edition = "2021"
description = "XSnippet is a simple web-service for sharing code snippets on the Internet."
readme = "README.md"
homepage = "https://xsnippet.org/"
repository = "https://github.com/xsnippet/xsnippet-api/"
license = "MIT"
keywords = ["snippets", "snippet", "code", "storage", "api"]
categories = [
    "web-programming",
    "web-programming::http-server",
]
publish = false

[profile.release]
debug = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
diesel = { version = "2.3.10", features = ["chrono"] }
diesel-async = { version = "0.9.2", features = ["deadpool", "postgres"] }
futures-util = { version = "0.3.32", features = ["async-await-macro"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }
percent-encoding = "2.3.2"
openssl-sys = { version = "0.9.117", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt"] }
